Add `rewrite` support for `tech.picnic.errorprone.refasterrules.FileRulesRecipes`